# ecT_Tadlas-Qt5

./: .gitignore  CMakeLists.txt  EctSys.cpp  EctSys.h  LBP_Circular_ECT_16.lib  MeasureSys.cpp  MeasureSys.h  README.md  TdlasSys.cpp  TdlasSys.h  Tikhonov.lib  base_alg.cpp  base_alg.h  calderon_circle_16_electrodes_ssjwq.lib  command.cpp  cs_ftfunction.cpp  cs_ftfunction.h  ectclass.cpp  ectclass.h  f0710.txt  glwidget.cpp  glwidget.h  landweber_alg.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matlabhelper.cpp  matlabhelper.h  mode.cpp  myopenglwid.cpp  myopenglwid.h  mypaintusb.cpp  mypaintusb.h  myshowwidget.cpp  myshowwidget.h  mythreads.cpp  mythreads.h  rwhelper.h  showwidget.cpp  (+16 more)
GeneratedFiles/: qrc_rsc.cpp  ui_mainwindow.h  ui_tdlasdialog.h
Lb/: L.txt  b.txt  newL_lap.txt  recb12021000.txt
Release/: moc_base_alg.cpp  moc_glwidget.cpp  moc_mainwindow.cpp  moc_mypaintusb.cpp  moc_tdlasdialog.cpp
Tikhonov/: Tikhonov.c  Tikhonov.def  Tikhonov.exp  Tikhonov.h  Tikhonov.lib  Tikhonov_data.c  Tikhonov_data.h  Tikhonov_initialize.c  Tikhonov_initialize.h  Tikhonov_rtw.bat  Tikhonov_rtw.mk  Tikhonov_terminate.c  Tikhonov_terminate.h  Tikhonov_types.h  buildInfo.mat  codeInfo.mat  div.c  div.h  eml_rand_mt19937ar_stateful.c  eml_rand_mt19937ar_stateful.h  eye.c  eye.h  inv.c  inv.h  landweber.c  landweber.h  landwebercode.c  landwebercode.h  mpower.c  mpower.h  norm.c  norm.h  normest.c  normest.h  rand.c  rand.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  (+11 more)
Tikhonov/examples/: main.c  main.h
Tikhonov/html/: Tikhonov1_mcode.html  Tikhonov1_watch.html  Tikhonov_buildlog1.html  Tikhonov_buildlog4.html  Tikhonov_c.html  Tikhonov_h.html  Tikhonov_initialize_c.html  Tikhonov_initialize_h.html  Tikhonov_terminate_c.html  Tikhonov_terminate_h.html  Tikhonov_types_h.html  contents_file.tmp  exported_values.mat  eye_c.html  eye_h.html  index.html  inv_c.html  inv_h.html  landwebercode126_mcode.html  landwebercode126_watch.html  landwebercode_c.html  landwebercode_h.html  metrics.html  mpower_c.html  mpower_h.html  norm_c.html  norm_h.html  rtGetInf_c.html  rtGetInf_h.html  rtGetNaN_c.html  rtGetNaN_h.html  rt_nonfinite_c.html  rt_nonfinite_h.html  rtwtypes_h.html  xgetrf_c.html  xgetrf_h.html  xswap_c.html  xswap_h.html  xtrsm_c.html  xtrsm_h.html
Tikhonov/interface/: _coder_Tikhonov_api.c  _coder_Tikhonov_api.h  _coder_Tikhonov_info.c  _coder_Tikhonov_info.h  _coder_Tikhonov_mex.c  _coder_Tikhonov_mex.h
Win32/Debug/untitled1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  untitled1.lastbuildstate
Win32/Release/untitled1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  untitled1.lastbuildstate
cbb/: CMakelists.txt  Command.cpp  Command.h  ectclass.cpp  ectclass.h  rwhelper.h
client/: CMakeLists.txt  ectclass.cpp  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mode.h  myClientCommand.cpp  myClientCommand.h  myTCPClient.cpp  myTCPClient.h  mypaintPoints.cpp  mypaintPoints.h  mypaintusb.cpp  mypaintusb.h  myshowwidget.cpp  myshowwidget.h  mythreads.h  rsc.qrc  tdlasdialog.cpp  tdlasdialog.h  tdlasdialog.ui
debug/: moc_glwidget.cpp  moc_matlabhelper.cpp  moc_myshowwidget.cpp  moc_mythreads.cpp
matlab/: LBP_Circular_ECT_16.h  LBP_Circular_ECT_16_types.h  Sen_matrix_16.txt  calderon_circle_12_electrodes_ssj.h  calderon_circle_12_electrodes_ssj.lib  calderon_circle_12_electrodes_ssj_types.h  calderon_circle_16_electrodes_ssj.h  calderon_circle_16_electrodes_ssj.lib  calderon_circle_16_electrodes_ssj_types.h  calderon_circle_32_electrodes_ssj.h  calderon_circle_32_electrodes_ssj.lib  calderon_circle_32_electrodes_ssj_types.h  matrix.h  rt_defines.h  rt_nonfinite.h  rtwtypes.h
matlabdynamic/: calderon_circle_16_electrodes_ssjwq.h  calderon_circle_16_electrodes_ssjwq_types.h  rt_defines.h  rt_nonfinite.h  rtwtypes.h
matlabstatic/: calderon_circle_16_electrodes_ssjwq.h  calderon_circle_16_electrodes_ssjwq.lib  calderon_circle_16_electrodes_ssjwq_types.h  rt_defines.h  rt_nonfinite.h  rtwtypes.h
server/: CMakeLists.txt  matlabhelper.h
server/algorithm/: CMakelists.txt  base_alg.cpp  base_alg.h  landweber_alg.cpp  landweber_alg.h  tikhonov_alg.cpp  tikhonov_alg.h
server/ftd2xx/: cs_ftfunction.cpp  cs_ftfunction.h  ftd2xx.h  mythreads.cpp  mythreads.h  myusb.cpp  myusb.h
server/measuresys/: CMakelists.txt  EctSys.cpp  EctSys.h  MeasureSys.cpp  MeasureSys.h  TdlasSys.cpp  TdlasSys.h  matlabhelper.cpp  matlabhelper.h
server/net/: CMakelists.txt  myTcpServerThread.cpp  myTcpServerThread.h  tcpserver.cpp  tcpserver.h  udpserver.cpp  udpserver.h
tdlasback/Tikhonov1/: Tikhonov.c  Tikhonov.exp  Tikhonov.h  Tikhonov.lib  Tikhonov_initialize.c  Tikhonov_initialize.h  Tikhonov_rtw.mk  Tikhonov_terminate.c  Tikhonov_terminate.h  Tikhonov_types.h  buildInfo.mat  codeInfo.mat  eye.c  eye.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
tdlasback/Tikhonov1/examples/: main.c  main.h
(+30 files in other folders)
